--- a/css/index.css
+++ b/css/index.css
@@ -1,70 +1,34 @@
-.header__text {
+.text {
   text-align: center;
-  border-bottom: 5px dotted black;
-  margin-left: 500px;
-  margin-right: 500px;
+  padding-bottom: 10px;
+  color: #F29472;
+}
+.text__header {
+  border-bottom: 5px dotted #592918;
+  margin-left: 100px;
+  margin-right: 100px;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #40303C;
+}
+.text__info {
+  margin: 50px;
+  color: #40303C;
+  margin-right: 350px;
 }
 
-.container {
-  text-align: center;
+body {
+  background-color: #F2CFBB;
   display: flex;
   justify-content: center;
-  align-items: center;
-  padding: 30px;
-}
-.container__input {
-  flex-direction: column;
-}
-.container__label {
-  font-size: xx-large;
-}
-.container__text-box--center {
-  margin-top: 20px;
-  border-radius: 10px;
-}
-.container__text-box--encode {
-  background-color: #8caa8c;
-}
-.container__text-box--decode {
-  background-color: #aa8c8c;
-}
-.container__text-box::placeholder {
-  color: black;
-  opacity: 0.75;
-  padding-top: 100px;
-  text-align: center;
 }
 
-.btn {
-  background-color: white;
-  color: black;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 30px;
-  margin-left: 50px;
-  margin-right: 50px;
-  cursor: pointer;
-  outline: none;
-  border-radius: 15px;
-  box-shadow: 0 9px #999;
-}
-.btn:active {
-  box-shadow: 0 5px #666;
-  transform: translateY(4px);
-}
-.btn__encode--color {
-  border: 2px solid green;
-}
-.btn__encode--color:active {
-  background-color: green;
-  color: white;
-}
-.btn__decode--color {
-  border: 2px solid red;
-}
-.btn__decode--color:active {
-  background-color: red;
-  color: white;
+.border {
+  width: 80%;
+  margin: 50px;
+  border-radius: 10px;
+  box-shadow: 10px 10px 10px 1px #ae1616, 15px 15px 15px 1px green inset;
+  background-image: url(../pics/AdobeStock_43248127.jpeg);
+  background-position: center;
+  background-size: cover;
+  padding: 50px;
 }
